--- a/home/style.css
+++ b/home/style.css
@@ -54,6 +54,7 @@ div > h1 {
     color: rgb(15, 212, 146);
     align-items: center;
     border-radius: 2px;
+    margin-top: 20px;
 }
 
 #footer > nav {
